# meety

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  README-pypi.md  README.md  meety-windows.spec  meety.desktop  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  stdeb.cfg
docs/: cli.md  configuration.md  example-complex-preferences.yaml  example-no-preferences.yaml  example-simple-preferences.yaml  gui.md  quick-start.yaml  select-files.md  specify-meetings.md
scripts/: bundle_debian  bundle_rpm  bundle_windows.bat  check_dist  coverage  create  test_installed  test_local  upload_pypi_RELEASE  upload_pypi_test
src/: cli.py  gui.py
src/meety/: __init__.py  __main__.py  args.py  config.py  loader.py  logging.py  resources.py
test/: conftest.py  test_loader.py  test_loader.yaml
test/connect/: test_handlers.py  test_handlers.yaml
test/data/: by_day.yaml  by_hour.yaml  by_various.yaml  handlers.yaml  nach_tag.yaml  names_connect_password.yaml  names_connect_password2.yaml  names_only.yaml  rating.yaml  short_prefs.yaml  synonyms.yaml  time_matches.yaml  to_clean.yaml
test/helpers/: testdata.py
test/io/: test_casefold.py  test_casefold.yaml  test_infer.py  test_infer.yaml  test_list_of_ranges.py  test_list_of_ranges.yaml  test_replace.py  test_replace.yaml  test_strip.py  test_strip.yaml  test_synonym.py  test_synonym.yaml
test/meetings/: test_de.py  test_de.yaml  test_delta.py  test_delta.yaml  test_intervals.py  test_intervals.yaml  test_match.py  test_match.yaml  test_match_de.yaml  test_match_en.yaml  test_match_fr.yaml  test_rating.py  (+3 more)
(+73 files in other folders)
