[metadata]
name = meety
description = Quickly start online meetings from YAML
long_description = file: README-pypi.md
long_description_content_type = text/markdown; charset=UTF-8
license = GPLv3+
license_file = LICENSE
url = https://github.com/GaetanoGeck/meety
author = Gaetano Geck
author_email = gaetano.geck@cs.tu-dortmund.de
requires-dist = setuptools
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Topic :: Communications

[aliases]
dists = sdist bdist_wheel

[options]
packages = find:
package_dir = = src
install_requires =
    appdirs
    pyyaml
    pyperclip
    termcolor
    colorama
    pyqt5
    pyshortcuts >= "1.8.0"

[bdist_rpm]
requires =
	python3-appdirs
	python3-pyyaml
	python3-pyperclip
	python3-termcolor
	python3-colorama
	python3-qt5

[options.packages.find]
where = src

[options.entry_points] =
console_scripts = 
    cmeety = meety.__main__:start_cli
    meety = meety.__main__:start_gui

[tool:pytest]
testpaths=
    test
norecursedirs=test/helpers

[coverage:run]
omit = 
    src/meety/cli/*
    src/meety/gui/*
    
[isort]
force_grid_wrap = 2
multi_line_output = 3
include_trailing_comma = True
